--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <path id="shoulder-arm" style="transform-origin: 110px 114px;" d="M20.5624 41.4929C19.2642 42.2225 17.835 42.6893 16.3564 42.8665C14.8778 43.0438 13.3787 42.9281 11.9448 42.526C10.511 42.1239 9.17031 41.4434 7.99944 40.5232C6.82856 39.603 5.85041 38.4612 5.12081 37.163C4.39121 35.8648 3.92445 34.4356 3.74719 32.957C3.42298 30.2218 4.10528 27.4622 5.66673 25.1933L4.11934 12.2857C3.3325 4.6878 5.50181 1.07244 11.365 0.337245C17.2281 -0.397948 20.5614 3.90893 21.2453 10.5121L22.557 23.1785C24.6113 25.0099 25.9296 27.5259 26.266 30.2574C26.4432 31.736 26.3275 33.235 25.9254 34.6689C25.5234 36.1028 24.8428 37.4434 23.9226 38.6143C23.0024 39.7852 21.8606 40.7633 20.5624 41.4929Z" fill="#6D432B"/>
             </g>
             <circle class="bear__shoulder bear__shoulder--left" r="11.34" cy="114.82" cx="49.51" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></circle>
-            <rect class="bear__tank" ry="4.85" y="106.5" x="54.9" height="33.43" width="48.95" style="opacity: 1; fill-opacity: 1; fill-rule: nonzero; stroke: none; stroke-width: 4.10835; stroke-linecap: round; stroke-linejoin: round; stroke-miterlimit: 4; stroke-dasharray: none; stroke-dashoffset: 0; stroke-opacity: 1; transform-origin: 0px 0px;" data-svg-origin="79.37500190734863 139.93000030517578" transform="matrix(1,0,0,0.9918,0,1.14743)"></rect>
-            <g class="bear__head" data-svg-origin="56.09000015258789 65.5999984741211" transform="matrix(1,0,0,1,0,1.16943)" style="transform-origin: 0px 0px;">
+            <rect class="bear__tank" ry="4.85" y="106.5" x="54.9" height="33.43" width="48.95" style="opacity: 1; fill-opacity: 1; fill-rule: nonzero; stroke: none; stroke-width: 4.10835; stroke-linecap: round; stroke-linejoin: round; stroke-miterlimit: 4; stroke-dasharray: none; stroke-dashoffset: 0; stroke-opacity: 1; transform-origin: 0 0;" data-svg-origin="79.37500190734863 139.93000030517578" transform="matrix(1,0,0,0.9918,0,1.14743)"></rect>
+            <g class="bear__head" data-svg-origin="56.09000015258789 65.5999984741211" transform="matrix(1,0,0,1,0,1.16943)" style="transform-origin: 0 0;">
                 <rect class="bear__fur bear__face" ry="5.64" y="74.94" x="61.23" height="37.99" width="36.29" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:4.21629286;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></rect>
                 <circle class="bear__fur bear__ear" r="7.94" cy="73.54" cx="64.03" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:3.28125;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></circle>
                 <rect class="bear__bandana" ry="0" y="82.08" x="59.15" height="9.83" width="40.44" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:4.12773705;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></rect>
                 <path class="bear__muzzle" d="M62.78 96.67c-.53 0-1.05.06-1.55.16v10.46a5.63 5.63 0 005.64 5.64h15.9v-6.65c0-5.32-3.76-9.6-8.43-9.6z" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:15.93559551;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></path>
-                <path class="bear__bandana bear__bandana-tie" d="M100.95 87.66h4.78c2.38 0 4.3 6.22 4.3 8.6h-9.08c-2.39 0-4.3-6.22-4.3-8.6h4.3z" style="opacity: 1; fill-opacity: 1; fill-rule: nonzero; stroke: none; stroke-width: 20.2849; stroke-linecap: square; stroke-linejoin: round; stroke-miterlimit: 4; stroke-dasharray: none; stroke-dashoffset: 0; stroke-opacity: 1; transform-origin: 0px 0px;" data-svg-origin="96.64999389648438 87.66000366210938" transform="matrix(0.90845,-0.41799,0.41799,0.90845,-27.7927,48.424)"></path>
+                <path class="bear__bandana bear__bandana-tie" d="M100.95 87.66h4.78c2.38 0 4.3 6.22 4.3 8.6h-9.08c-2.39 0-4.3-6.22-4.3-8.6h4.3z" style="opacity: 1; fill-opacity: 1; fill-rule: nonzero; stroke: none; stroke-width: 20.2849; stroke-linecap: square; stroke-linejoin: round; stroke-miterlimit: 4; stroke-dasharray: none; stroke-dashoffset: 0; stroke-opacity: 1; transform-origin: 0 0;" data-svg-origin="96.64999389648438 87.66000366210938" transform="matrix(0.90845,-0.41799,0.41799,0.90845,-27.7927,48.424)"></path>
                 <rect class="bear__nose" ry="3.21" y="95.63" x="60.17" height="6.43" width="12.28" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:2.94184494;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></rect>
                 <circle class="bear__fur bear__ear" style="opacity:1;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:3.28125;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" cx="94.72" cy="73.54" r="7.94"></circle>
             </g>
@@ -104,6 +104,15 @@
             </g>
         </g>
     </svg>
+    <div class="life"></div>
+    <p class="counter">Счёт: <span>0</span></p>
+    <div class="statistics">
+        <div class="statistics__modal">
+            <h1>Игра завершена!</h1>
+            <p>Твой счёт: <span></span></p>
+            <button>Сыграть еще раз!</button>
+        </div>
+    </div>
 </div>
 <script src="index.js"></script>
 </body>
