добавила цвета симбирсофт, убрала кулачки, ускорила жуков с ростом уровня, частично поменяла svg для новой истории

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="statistics hidden" id="statisticContainer">
         <div class="statistics__modal">
             <img src="game-over.svg">
-            <h2>Твой счёт: 👊 <span></span> 👊</h2>
+            <h2>Твой счёт:  <span></span></h2>
             <p></p>
             <button class="btn">Сыграть еще раз!</button>
         </div>
