добавила варианты фона с учетом адаптива

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="container">
     <div class="welcome" id="welcomeContainer">
         <button class="welcome__slogan"><img class="btn" src="balloon.svg"></button>
+        <img id="story" src="story.svg">
     </div>
     <canvas id="canvas" width="1280" height="720"></canvas>
     <div id="bugContainer" width="1280" height="720"></div>
@@ -172,6 +173,21 @@
         </div>
     </div>
 </div>
+    <div id="storyText">
+        <h3>Мишка-frontовишка попал в беду! </h3>
+        <p>
+            Всю неделю он решал боевые задачи в местности под кодовым названием "Legacy Source". Завтра его ждал релиз, 2 дня отгула и 4 банки кофе, но что-то пошло не по плану...
+        </p>
+        <p>
+            Проходя через дебри спагетти-кода, он случайно набрел на
+            плохоспроектированный класс, где его окружили баги!
+        </p>
+        <p>
+            Группа коллег отбивались на соседнем фронте, отряд QA был на подходе... “Это Конец...” - прошептал мишка, заряжая обойму клавиш в свою новенькую microsoft ergonomic keyboard 4000.
+            Помоги мише побить грозные баги!!!
+        </p>
+        </p>
+    </div>
 </div>
 <script src="index.js"></script>
 </body>
