--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
             <button class="btn">Сыграть еще раз!</button>
         </div>
     </div>
+    
+    <img  class="tree hidden" src="tree.svg">
+    
+    <div class="tree-row"></div>
 </div>
     <div id="storyText">
         <h3>Мишка-frontовишка попал в беду! </h3>
