--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </g>
         </g>
     </svg>
-    <div id="lifeAndCounter">
+    <div id="lifeAndCounter" class="hidden">
         <p class="counter">Счёт: <span>0</span></p>
         <div class="life"></div>
     </div>
