--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
         </div>
     </div>
     
-    <img  class="tree hidden" src="tree.svg">
-    
-    <div class="tree-row"></div>
+    <div class="tree-row">
+        <img  class="tree" src="tree.svg">
+    </div>
 </div>
     <div id="storyText">
         <h3>Мишка-frontовишка попал в беду! </h3>
