Counter and heart fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>23day</title>
 </head>
 <body>
-<div class="allContent">
+<div class="allContent active">
 <div class="container">
     <div class="welcome" id="welcomeContainer">
         <button class="welcome__slogan"><img class="btn" src="balloon.svg"></button>
@@ -160,9 +160,11 @@
             </g>
         </g>
     </svg>
-    <div id="lifeAndCounter" class="hidden">
-        <p class="counter">Счёт: <span>0</span></p>
-        <div class="life"></div>
+    <div class="header hidden" class="hidden">
+        <div class="header__wrap">
+            <p class="counter">Счёт: <span>0</span></p>
+            <div class="life"></div>
+        </div>
     </div>
     <div class="statistics hidden" id="statisticContainer">
         <div class="statistics__modal">
