Gameover modal fixes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="life"></div>
         </div>
     </div>
-    <div class="statistics hidden" id="statisticContainer">
+    <div class="statistics hidden">
         <div class="statistics__modal">
             <img src="game-over.svg">
             <h2>Твой счёт:  <span></span></h2>
